<resources>
    <string name="app_name">Combo Master</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9312207078900289/8398831223</string>
    <string name="reward_ad_unit_id" translatable="false">ca-app-pub-9312207078900289/2917816820</string>
    <string name="action_settings">Settings</string>
    <string name="time_limit">Time Limit:</string>
    <string name="version" translatable="false">5.6.2</string>
    <string name="modified_time" translatable="false">1473638400</string>
    <string name="support_version" translatable="false">276</string>
    <string name="settings">Settings</string>
    <string name="orb_type">Orbs type:</string>
    <string name="sound_onoff">BGM: </string>
    <string name="step">Step</string>
    <string name="skill" translatable="false">Skill</string>
    <string name="skill_1">Skill 1</string>
    <string name="skill_2">Skill 2</string>
    <string name="skill_3">Skill 3</string>
    <string name="skill_4">Skill 4</string>
    <string name="skill_5">Skill 5</string>
    <string name="skill_6">Skill 6</string>
    <string name="drop_type">Drop type</string>
    <string name="drop_type_in_calc_mode" translatable="false">Drop type in [PAD Calculator]</string>
    <string name="training_mode">Training mode</string>
    <string name="skills">Skills</string>
    <string name="arrow">" > "</string>
    <string name="str_basic">Basic</string>
    <string name="str_training">Settings</string>
    <string name="str_skills">Skills</string>
    <string name="str_monster" translatable="false">Box</string>
    <string name="chooser_title">Choose an image</string>
    <string name="str_monster_box">Box</string>
    <string name="str_team">Team</string>
    <string name="no_such_id" formatted="false">Can not find monster id=%d</string>
    <string name="str_cop">Cooperative Play</string>
    <string name="menu_report">[Construct Tutorial]</string>
    <string name="menu_training_mode">[Training Mode]</string>
    <string name="menu_single_mode">[Single Drop Mode]</string>
    <string name="menu_calculate_mode">[PAD Calculator]</string>
    <string name="menu_calculate_7x6_mode">[7x6 Mode]</string>
    <string name="menu_calculate_5x4_mode">[5x4 Mode]</string>
    <string name="menu_egg_machine">[Egg Machine]</string>
    <string name="menu_simulator_mode">[Simulator]</string>
    <string name="menu_monster_box">[PAD Team Setup]</string>
    <string name="menu_settings_mode">[Settings]</string>
    <string name="menu_cop_mode">[Cooperative Play]</string>
    <string name="menu_quit_mode">[Quit]</string>
    <string name="all_orbs_transform">"All Orbs become "</string>
    <string name="color_change">Color Change </string>
    <string name="error_same_type">cannot change to the same orb type</string>
    <string name="at_least_one">at least choose one type</string>
    <string name="result" translatable="false">Result</string>
    <string name="total_combo" translatable="false">Total %d combo!</string>
    <string name="second">sec.</string>
    <string name="avg_combo">"Avg. Combo "</string>
    <string name="show_result_dialog_directly">show result dialog directly</string>
    <string name="show_path_if_available">display path\n(Replay required)</string>
    <string name="no_">No.</string>
    <string name="lv">Lv</string>
    <string name="hp_">HP+</string>
    <string name="max99">99</string>
    <string name="atk_">Atk+</string>
    <string name="rec_">Rcv+</string>
    <string name="awoken">Awoken</string>
    <string name="max10">10</string>
    <string name="str_create">create</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="rcv">RCV</string>
    <string name="confirm">Confirm</string>
    <string name="leader_skill">Leader\n   Skill</string>
    <string name="awoken_skills">Awoken\n   Skills</string>
    <string name="potential_awoken_skills">Potential</string>
    <string name="super_awoken_skills">Super Awoken</string>
    <string name="add_monster">add monster</string>
    <string name="data_loading">Data Loading</string>
    <string name="str_color_weakness">Color Weakness Mode</string>
    <string name="query_name">Name</string>
    <string name="query_effect">Effect</string>
    <string name="query_awoken">Awoken Skills</string>
    <string name="query_attr">Attribute</string>
    <string name="query_type">Type</string>
    <string name="wiki">http://www.pad.wikia.com/wiki/</string>
    <string name="regex_change_all">ll Orbs become (\\S+)</string>
    <string name="split_change_all">/</string>
    <string name="regex_change_color">ll (\\S+) Orbs (become) (\\S+) Orbs</string>
    <string name="regex_ctw">reely move orbs for (\\d+) second</string>
    <string name="regex_add_plus">ll (\\S+)( and (\\S+))? Orbs currently on the board will gain</string>
    <string name="regex_two_type_stronger">Attacks from (\\S+) and (\\S+) type monsters are (\\S+)x stronger for (\\d+) turn</string>
    <string name="regex_orb_stronger">Matched (\\S+) Orbs are (\\S+)x stronger for (\\d+) turn</string>
    <string name="regex_type_stronger">Attacks from (\\S+) type monsters are (\\S+)x stronger for (\\d+) turn</string>
    <string name="regex_deal_damage">damage to all enemies equal to (\\d+)%%</string>
    <string name="regex_reduce_def">For (\\d+) turn, defense of all enemies is reduced to (\\d+)%%</string>
    <string name="str_no_">"No. "</string>
    <string name="str_lv_">"Lv. "</string>
    <string name="str_monster_no">Set Monster No</string>
    <string name="str_leader">Leader</string>
    <string name="str_same_leader">Same Leader</string>
    <string name="str_friend_leader">Friend Leader</string>
    <string name="str_power">Power</string>
    <string name="str_recovery">Recovery</string>
    <string name="str_total_hp">Total HP</string>
    <string name="str_leader_skill">Leader Skill</string>
    <string name="str_active_skill">Active Skill1</string>
    <string name="str_active_skill2">Active Skill2</string>
    <string name="str_friend_leader_skill">Friend Leader Skill</string>
    <string name="str_edit">Edit</string>
    <string name="str_done">Done</string>
    <string name="str_left_corner">Select upper left corner</string>
    <string name="str_right_corner">Select bottom right corner</string>
    <string name="power_up_text" formatted="false">"%d turns, power %sx "</string>
    <string name="str_select">Select</string>
    <string name="str_damage" formatted="false">Damage: %s \nRecovery: %s</string>
    <string name="str_restraining">Enemy type:</string>
    <string name="str_title_damage">Damage</string>
    <string name="str_title_combo">Combo</string>
    <string name="str_max">Max</string>
    <string name="str_min">Min</string>
    <string name="str_hyper">Hyper</string>
    <string name="str_fix">Fix</string>
    <string name="str_set_bgm">Choose file</string>
    <string name="str_reset">Reset</string>
    <string name="need_network">Images download from network, if you don\'t have network you won\'t see the image.</string>
    <string name="check_update">checking for update…</string>
    <string name="update">Update</string>
    <string name="updating">Updating…</string>
    <string name="downloading">Downloading…</string>
    <string name="copying">Copying…</string>
    <string name="ls_not_support">No skill or skill doesnot support</string>
    <string name="ls_hp_condition" formatted="false">When HP %s %d%%, </string>
    <string name="ls_hp_condition_full">When HP is full, </string>
    <string name="ls_multi_mode">In cooperative play mode,</string>
    <string name="ls_all_monster">"all monsters "</string>
    <string name="ls_monster_type" formatted="false">"all %s type "</string>
    <string name="ls_combo_factor" formatted="false">When reaching %d combos, ATK becomes %1.2fx.</string>
    <string name="ls_combo_factor_addition" formatted="false">Each additional combo up to %d adds %1.1fx ATK for a possible total of %1.1fx.</string>
    <string name="ls_become_x" formatted="false">%s becomes %sx</string>
    <string name="ls_color_factor" formatted="false">In %s,when matching and attacking with %d colors,all monsters ATK become %1.1fx.</string>
    <string name="ls_color_factor_addition" formatted="false">Each additional attacking color adds %1.2fx ATK, up to a max of %1.1fx.</string>
    <string name="ls_multi_orb_combo_addition" formatted="false">When matching a connected group of %d or more %s Orbs ATK becomes %1.2fx . Add %1.2fx for each additional Orb, up to a max of %1.2fx(for %d Orbs)</string>
    <string name="ls_multi_orb_combo" formatted="false">When matching a connected group of %d or more %s Orbs ATK becomes %1.2fx.</string>
    <string name="ls_multi_orb_shield" formatted="false">Reduce damage taken by %d%%.</string>
    <string name="ls_target_orb_combo" formatted="false">When matching %d sets of %s orbs, ATK becomes %1.1fx.</string>
    <string name="ls_target_orb_combo_direct_damage" formatted="false">When matching %d sets of %s orbs, deal %d damage to all enemies.</string>
    <string name="ls_target_orb_shield" formatted="false">When matching %d sets of %s orbs, Reduces all damage received by %d%%.</string>
    <string name="lst_reduce_by_hp_full" formatted="false">When HP is full, reduces all damage received by %d%%</string>
    <string name="lst_reduce_by_hp_50" formatted="false">When HP is less than %d%%, reduce damage taken by %d%%</string>
    <string name="lst_reduce_by_hp_50_up" formatted="false">When HP is more than %d%%, Reduce damage taken by %d%%</string>
	<string name="reset_combo">Reset Combo</string>
	<string name="str_analysis">Analysis location</string>
	<string name="str_setup">Set up</string>
	<string name="str_dont_set">You don\'t have to set up analysis location if you didn\'t encounter analysis problem.</string>
	<string name="str_member">Member </string>
	<string name="str_backup_restore">Backup/Restore\nMonster Box</string>
	<string name="str_backup">Backup</string>
	<string name="str_restore">Restore</string>
	<string name="str_fullscreen">Fullscreen</string>
	<string name="str_restart_app">(Need to restart application)</string>
	<string name="str_backup_path" formatted="false">Backup file is located in path:\n %s</string>
  <string name="str_set_path">Set path</string>
  <string name="str_path">Path:</string>
  <string name="str_reset_bgm">Reset</string>
  <string name="str_keep_ratio">Keep screen ratio</string>
  <string name="str_keep_ratio_warning_restart_app">If unchecked,your scene will be resized but aspect ratio will not be kept, Need to restart app</string>
  <string name="sound">Sound: </string>
  <string name="str_sound_file">Please choose the swap orb sound file, and put the combo sound in the same path with filename combo1.wav combo2.wav …etc\n
      Program will load combo sound automatically.
      </string>
  <string name="str_orb_shining">Shine effect</string>
  <string name="str_load_from_url">Quick setup from url</string>
  <string name="str_load_by_filter">Quick setup by filter</string>
    <string name="str_0">+0</string>
    <string name="str_how_to_use_it">
        Press here to see the guideline.\nCurrently support www.puzzledragonx.com and www.loglesslove.net and pad.skyozora.com\nYou could send me other team simulator web links, I\'ll try to add it to support list if possible.
    </string>
    <string name="str_filter_hint">
        Quick setup by filter is straightforward, just try it :) 
    </string>
  <string name="str_load_by_padherderr">Quick setup from PadHerder</string>
    <string name="str_padherder_hint">
        Quick setup by inputing your username.(https://www.padherder.com/)\n
        If data size bigger than monster box(size: 400),will first choose to add high priority and a high rarity one.
    </string>
    <string name="use_original_tab_style2">Use original tab style</string>
</resources>