<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:stretchColumns="2" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         >
        <TextView android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/no_"/>
        <EditText android:id="@+id/monster_no"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
             />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/lv"
            android:layout_gravity="center" />
        <NumberPicker android:id="@+id/lv_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        <TextView android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/hp_"
            android:layout_gravity="center"
            />
        <NumberPicker android:id="@+id/hp_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
          >

        <TextView android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/atk_"
            android:layout_gravity="center"/>
        <NumberPicker android:id="@+id/atk_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        <TextView android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/rec_"
            android:layout_gravity="center"/>
        <NumberPicker android:id="@+id/rec_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/awoken"
            android:layout_gravity="center"/>
        <NumberPicker android:id="@+id/awoken_picker"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
             />
        
        <Button android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_create"
            android:layout_gravity="center"
            />
    </TableRow>


</TableLayout>

</ScrollView>