<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minHeight="@dimen/orb_size" 
    android:padding="@dimen/fragment_padding">


    <LinearLayout 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_padding">
        <TextView
            android:id="@+id/tv_avg_combo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_combo"
            android:textSize="15sp"
             />
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_combo"
            />
    </LinearLayout>
    


        <TextView
            android:id="@+id/textView10"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/drop_type"
            android:layout_marginBottom="@dimen/fragment_padding" />

        <include android:id="@+id/drop_orbs"
            layout="@layout/orb_list"
            android:layout_marginBottom="@dimen/fragment_padding" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_type_in_calc_mode"
            android:layout_marginBottom="@dimen/fragment_padding" />

        <include android:id="@+id/drop_orbs_in_calc_mode"
            layout="@layout/orb_list" />
        
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_orb_shining"
            android:textSize="15sp"
             />
        <CheckBox android:id="@+id/shine_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
        	/>
    	
    </LinearLayout>

</LinearLayout>
